syntax = "proto3";

package product;

import "google/api/annotations.proto";

option go_package = ".";

service ProductService {
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
        option (google.api.http) = {
            get: "/v1/product/{id}"
        };
    }
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}